  DefaultForeignKeySearchModel.getSearchEntities() implemented
  DefaultForeignKeySearchModelTest added
  DefaultForeignKeySearchModelTest improved
  DefaultForeignKeySearchModel.getSearchEntities() bug fixed
  ConnectionPoolImplTest, added trying to return a connection with an open transaction to the pool
  DefaultEntityTableModel constructor now throws IllegalArgumentException if searchModel is null or the search model entityID does not match the one supplied as parameter
  DefaultEntityTableModelTest updated accordingly
  AbstractFilteredTableModel, null check added for columnModel parameter
  AbstractFilteredTableModel updated accordingly
  logback.xml no longer included in dist jars
  Util.createRandomString() could not create strings of a fixed length, test added
  EntityLookupModel.setAdditionalLookupCriteria() no longer has the side effect of resetting the selected values, documented, tested
  EntityUiUtil.createNewEntityButton() added for EntityLookupField and EntityComboBox
  IntValueLink and DoubleValueLink now take a format via the constructor
  EntityUiUtil.createTextField() now uses the format associated with the property when instantiating IntValueLink or DoubleValueLink
  PropertyImpl, number format by default has grouping off
  FilteredTableModel.getSingleSelectionObserver() added
  AbstractFilteredTableModel.getSingleSelectionObserver() implemented, tested
  TextValueLink.format field added, with a default non-formatting format, removed from IntValueLink, DoubleValueLink and FormattedValueLink, propagated via constructor
  IntValueLink and DoubleValueLink format parameter narrowed to NumberFormat
  TextValueLink.getValueAsText(), no longer overridden in subclasses, finalized
  Property.setFormat() now throws IllegalArgumentException if the format does not fit the property, tested
  Util.getNonGroupingNumberFormat() added, used where applicable
  UiUtil.transferFocusOnEnter() now uses keyReleased instead of keyPressed